# cave_story

./: CMakeLists.txt  atencao.txt  cmake_script.sh
src/: animated_sprite.cpp  animated_sprite.h  game.cpp  game.h  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  player.cpp  player.h  sprite.cpp  sprite.h
